SERVER-4399 make replica set updating more reliable in c++ driver, remove nodes when no longer present in config